# GeneticAlgorithmPython

./: .gitignore  .project  .readthedocs.yaml  Example_GeneticAlgorithm.py  GA.py  LICENSE  README.md  RELEASING.md  __init__.py  comprehensive_test.py  conf.py  example.py  example2.py  example_clustering_2.py  example_clustering_3.py  example_custom_operators.py  example_multi_objective.py  example_travelling_salesman.ipynb  ga.py  lifecycle.py  publish.sh  pygad.py  pygad_orig.py  pyproject.toml  reproduce_atomicity.py  requirements.txt  setup.py  setup_venv.sh  test_crossover_mutation.py  test_env.py  test_ga.py  test_gene_constraint.py  test_gene_space_allow_duplicate_genes.py  test_stop_criteria.py
.github/: FUNDING.yml
.github/workflows/: main.yml  main_py310.yml  main_py311.yml  main_py312.yml  main_py313.yml  main_py314.yml  main_py37.yml  main_py38.yml  main_py39.yml  mainpython35.yml  release.yml  scorecard.yml
Cython/: Example_GeneticAlgorithm.pyx  GA.pyx
NSGA-II/: non_dominant_sorting.py  non_dominant_sorting_crowding_distance.py
Tutorial Project/: Example_GeneticAlgorithm.py  README.md  ga.py
docs/: requirements.txt
docs/md/: HEADER.md  cnn.md  gacnn.md  gann.md  helper.md  kerasga.md  nn.md  pygad.md  pygad_more.md  releases.md  torchga.md  utils.md  visualize.md
docs/source/: Footer.rst  Header.rst  README_pygad_ReadTheDocs.rst  README_pygad_cnn_ReadTheDocs.rst  README_pygad_gacnn_ReadTheDocs.rst  README_pygad_gann_ReadTheDocs.rst  README_pygad_kerasga_ReadTheDocs.rst  README_pygad_nn_ReadTheDocs.rst  README_pygad_torchga_ReadTheDocs.rst  adaptive_mutation.md  benchmarks.md  cnn.md  cnn.rst  conf.py  custom_functions.md  fitness_calculation.md  gacnn.md  gacnn.rst  gann.md  gann.rst  gann_image_classification.md  gann_regression_1.md  gann_regression_2.md  gann_xor.md  gene_values.md  generations.md  help.md  help_languages.md  help_projects.md  help_support.md  help_tutorials.md  helper.md  helper.rst  index.md  index.rst  kerasga.md  kerasga.rst  kerasga_image_conv.md  kerasga_image_datagen.md  kerasga_image_dense.md  (+32 more)
examples/: example.py  example_clustering_2.py  example_clustering_3.py  example_custom_operators.py  example_dynamic_population_size.py  example_fitness_wrapper.py  example_gene_constraint.py  example_gene_space.py  example_generate_report.py  example_lifecycle_classes.py  example_lifecycle_methods.py  example_logger.py  example_multi_objective.py  example_multi_objective_nsga3.py  example_parallel_processing.py  example_summary.py  example_travelling_salesman.ipynb  genetic.pkl  pygad_lifecycle.py
examples/KerasGA/: XOR_classification.py  cancer_dataset.py  cancer_dataset_generator.py  image_classification_CNN.py  image_classification_Dense.py  regression_example.py
examples/TorchGA/: XOR_classification.py  image_classification_CNN.py  image_classification_Dense.py  regression_example.py
examples/benchmarks/: example_classic_ackley.py  example_classic_griewank.py  example_classic_himmelblau.py  example_classic_rastrigin.py  example_classic_rosenbrock.py  example_classic_schwefel.py  example_classic_sphere.py  example_dtlz1.py  example_dtlz2.py  example_dtlz3.py  example_dtlz4.py  example_knapsack.py  example_tsp.py  example_zdt1.py  example_zdt2.py  example_zdt3.py  example_zdt4.py  example_zdt6.py
examples/clustering/: example_clustering_2.py  example_clustering_3.py
examples/cnn/: example_image_classification.py
examples/data/: dataset_outputs.npy  outputs.npy
examples/gacnn/: example_image_classification.py
examples/gann/: example_XOR_classification.py  example_classification.py  example_regression.py  example_regression_fish.py
examples/nn/: example_XOR_classification.py  example_classification.py  example_regression.py  example_regression_fish.py  extract_features.py
examples/plots/: example_plot_fitness.py  example_plot_fitness_band.py  example_plot_genes.py  example_plot_new_solution_rate.py  example_plot_non_dominated_hypervolume.py  example_plot_pareto_front_curve_2d.py  example_plot_pareto_front_curve_3d.py  example_plot_pareto_front_evolution.py  example_plot_pareto_front_heatmap.py  example_plot_pareto_front_pcp.py  example_plot_pareto_front_scatter_matrix.py  example_plot_population_diversity.py
examples/quality_indicators/: example_generational_distance.py  example_hypervolume.py  example_inverted_generational_distance.py  example_spacing.py
pygad/: __init__.py  pygad.py  pygad_modified.py  reproduce_atomicity.py
pygad/benchmarks/: __init__.py  classic.py  dtlz.py  knapsack.py  tsp.py  zdt.py
pygad/cnn/: __init__.py  cnn.py
pygad/gacnn/: __init__.py  gacnn.py
pygad/gann/: __init__.py  gann.py
pygad/helper/: __init__.py  activations.py  misc.py  nsga2.py  unique.py
pygad/kerasga/: __init__.py  kerasga.py
pygad/nn/: __init__.py  nn.py
pygad/torchga/: __init__.py  torchga.py
pygad/utils/: __init__.py  crossover.py  engine.py  indicators.py  mutation.py  nsga.py  nsga2.py  nsga3.py  parent_selection.py  quality_indicators.py  report.py  (+1 more)
tests/: adaptive_mutation.py  example_clustering_2.py  example_clustering_3.py  example_custom_operators.py  test_adaptive_mutation.py  test_allow_duplicate_genes.py  test_benchmarks.py  test_best_solution.py  test_cnn.py  test_crossover_atomicity_comprehensive.py  test_crossover_mutation.py  test_example.py  test_gacnn.py  test_gann.py  test_gene_constraint.py  test_gene_space.py  test_gene_space_allow_duplicate_genes.py  test_gene_type.py  test_indicators.py  test_integration_gene_structure.py  test_kerasga.py  test_lifecycle.py  test_lifecycle_callbacks_calls.py  test_mutation_atomicity_comprehensive.py  test_nsga3.py  test_nsga3_dtlz2.py  test_nsga3_pipeline.py  test_nsga3_population_growth.py  test_number_fitness_function_calls.py  test_operators.py  test_parallel.py  test_push_to_vilvik.py  test_quality_indicators.py  test_report.py  test_save_solutions.py  test_sbx_polynomial.py  test_stop_criteria.py  test_stop_criteria_extensions.py  test_summary.py  test_torchga.py  (+1 more)
(+4 files in other folders)
