[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygad"
dynamic = ["version"]
description = "PyGAD: A Python Library for Building the Genetic Algorithm and Training Machine Learning Algoithms (Keras & PyTorch)."
readme = "README.md"
license = ""
authors = [
    { name = "Ahmed Fawzy Gad", email = "ahmed.f.gad@gmail.com" },
]
dependencies = [
    "cloudpickle",
    "matplotlib",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/ahmedfgad/GeneticAlgorithmPython"
"Documentation" = "https://pygad.readthedocs.io"
"GitHub Repository" = "https://github.com/ahmedfgad/GeneticAlgorithmPython"
"PyPI Project" = "https://pypi.org/project/pygad"
"Conda Forge Project" = "https://anaconda.org/conda-forge/pygad"
"Donation Stripe" = "https://donate.stripe.com/eVa5kO866elKgM0144"
"Donation Open Collective" = "https://opencollective.com/pygad"
"Donation Paypal" = "http://paypal.me/ahmedfgad"

[tool.hatch.version]
path = "pygad/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pygad",
]

[project.optional-dependencies]
deep_learning = ["keras", "torch"]

# PyTest Configuration. Later, PyTest will support the [tool.pytest] table.
[tool.pytest.ini_options]
testpaths = ["tests"]